import grpc
from concurrent import futures
import sys
import os

# ğŸš€ áŠáŸ†ááŸ„áŸ‡áŸáŸ’ášá¶á™áŸá˜áŸ’ášá¶á”áŸ‹ ModuleNotFoundError:
# á”á“áŸ’ááŸ‚á˜ Folder 'protos' á‘áŸ…á€áŸ’á“á»á„ Search Path ášá”áŸáŸ‹ Python
sys.path.append(os.path.join(os.path.dirname(__file__), 'protos'))

try:
    import risk_engine_pb2 as pb2
    import risk_engine_pb2_grpc as pb2_grpc
except ImportError:
    # Fallback áŸá˜áŸ’ášá¶á”áŸ‹á€ášáá¸ Import áá¶á˜ášá™áŸˆ Package
    import protos.risk_engine_pb2 as pb2
    import protos.risk_engine_pb2_grpc as pb2_grpc

class RiskService(pb2_grpc.RiskEngineServiceServicer):
    def CheckRisk(self, request, context):
        # ğŸ§  á¡á¼á áŸ’áŸá·á€ AI ášá”áŸáŸ‹á˜áŸá”á‰áŸ’á‡á¶á€á¶ášáŸ– á”á…áŸ’á…á»á”áŸ’á”á“áŸ’á“á‚áº Default ALLOW
        print(f"ğŸ“¡ Analyzing risk for User: {request.user_id}, Amount: {request.amount}")
        
        # á†áŸ’á›á¾á™áá”á‘áŸ…á€á¶á“áŸ‹ Java (ááŸ’ášá¼áœááŸ‚ match á‡á¶á˜á½á™ risk_engine.proto)
        return pb2.RiskCheckResponse(
            risk_score=10,
            risk_level="LOW",
            action="ALLOW"
        )

def serve():
    # á”á„áŸ’á€á¾á gRPC Server á‡á¶á˜á½á™ 10 Threads
    server = grpc.server(futures.ThreadPoolExecutor(max_workers=10))
    pb2_grpc.add_RiskEngineServiceServicer_to_server(RiskService(), server)
    
    # á”á¾á€ Port 50051 (ááŸ’ášá¼áœá“á¹á„ titan.ai.port á€áŸ’á“á»á„ Java)
    server.add_insecure_port('[::]:50051')
    print("ğŸ¤– Titan AI Service is running on port 50051...")
    server.start()
    server.wait_for_termination()

if __name__ == '__main__':
    serve()